--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+   <div class="buttons">
+
+      <button id="two">2</button>
+      <button id="three">3</button>
+      <button id="four">4</button>
+      <button id="five">5</button>
+
+   </div>
 
    <script src="js/script.js"></script>
 
